apps/it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.default.svc.cluster.local/api/authz/auth-request"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.k8s.squiggle.org/?rm=$request_method"
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  tls:
    - hosts:
        - it-tools.k8s.squiggle.org
      secretName: it-tools-tls-secret
  rules:
    - host: it-tools.k8s.squiggle.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools
                port:
                  number: 80
